Fox for bug #28509: strange behaviour: passing a decimal value to PS

Set parameter's type to Item::DECIMAL_ITEM assigning a decimal value.